cloudformation/compute.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: Create compute infrastructure for aws-iac-study

Resources:
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for ALB
      VpcId: !ImportValue aws-iac-study-vpc-id
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: aws-iac-study-alb-sg

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for EC2
      VpcId: !ImportValue aws-iac-study-vpc-id
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSecurityGroup
      Tags:
        - Key: Name
          Value: aws-iac-study-ec2-sg

  EC2InstanceA:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-xxxxxxxxxxxxxxxxx
      InstanceType: t3.micro
      SubnetId: !ImportValue aws-iac-study-public-subnet-a-id
      SecurityGroupIds:
        - !Ref EC2SecurityGroup
      Tags:
        - Key: Name
          Value: aws-iac-study-ec2-a

  EC2InstanceC:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-xxxxxxxxxxxxxxxxx
      InstanceType: t3.micro
      SubnetId: !ImportValue aws-iac-study-public-subnet-c-id
      SecurityGroupIds:
        - !Ref EC2SecurityGroup
      Tags:
        - Key: Name
          Value: aws-iac-study-ec2-c

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: aws-iac-study-alb
      Scheme: internet-facing
      Type: application
      Subnets:
        - !ImportValue aws-iac-study-public-subnet-a-id
        - !ImportValue aws-iac-study-public-subnet-c-id
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Tags:
        - Key: Name
          Value: aws-iac-study-alb

  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: aws-iac-study-tg
      Port: 80
      Protocol: HTTP
      VpcId: !ImportValue aws-iac-study-vpc-id
      TargetType: instance
      Targets:
        - Id: !Ref EC2InstanceA
          Port: 80
        - Id: !Ref EC2InstanceC
          Port: 80
      HealthCheckProtocol: HTTP
      HealthCheckPath: /
      Tags:
        - Key: Name
          Value: aws-iac-study-tg

  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: arn:aws:acm:ap-northeast-1:xxxxxxxxxxxx:certificate/xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ALBTargetGroup
          
Outputs:
  EC2SecurityGroupId:
    Value: !Ref EC2SecurityGroup
    Export:
      Name: aws-iac-study-ec2-sg-id
